--- a/RetailStoreInventoryData.ipynb
+++ b/RetailStoreInventoryData.ipynb
@@ -10,7 +10,7 @@
         "JXoJUDgRAeYy",
         "2YU_IznhJ5Xu"
       ],
-      "authorship_tag": "ABX9TyOQxdiMDo8RoCkL+rNvpu35"
+      "authorship_tag": "ABX9TyOzDSf64w5BFdb2er3rA+Hs"
     },
     "kernelspec": {
       "name": "python3",
@@ -6799,7 +6799,12 @@
         "\n",
         "# Regrouping data by month-end using 'resample()' fn for datetime tasks ('ME' -> month end)\n",
         "\n",
-        "df_2022.resample('ME', on = 'Date')['UnitsSold'].agg(lambda x: calc_revenue(x, df.loc[x.index, 'Price'], df.loc[x.index, 'Discount']).sum()).rename('MonthlyRevenue')\n",
+        "df_2022.resample('ME', on = 'Date')['UnitsSold'].agg(lambda x :                # x iterates over 'UnitsSold' values\n",
+        "                                                     calc_revenue(x,           # Calling 'calc_revenue()' defined above\n",
+        "                                                                  df.loc[x.index, 'Price'],\n",
+        "                                                                  df.loc[x.index, 'Discount']\n",
+        "                                                                  ).sum()\n",
+        "                                                    ).rename('MonthlyRevenue') # Giving contextually better name to col\n",
         "\n"
       ],
       "metadata": {
@@ -6808,9 +6813,9 @@
           "height": 492
         },
         "id": "mq2dXgqj80Of",
-        "outputId": "614e53b3-244e-4df7-f327-ead3a745eae4"
+        "outputId": "ec4d51ea-e030-4bc1-f5ab-90fe64e5aefb"
       },
-      "execution_count": 33,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6912,7 +6917,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 43
         }
       ]
     },
@@ -6930,10 +6935,10 @@
       "source": [
         "# prompt: Which store is generating the highest revenue in each region and which product category of that store has sold most units?\n",
         "\n",
-        "pd.options.display.float_format = '{:.2f}'.format\n",
+        "# pd.options.display.float_format = '{:.2f}'.format\n",
         "\n",
         "# Calculate revenue for each transaction\n",
-        "df['Revenue'] = df['UnitsSold'] * df['Price'] * (1 - df['Discount'] / 100)\n",
+        "df['Revenue'] = calc_revenue(df['UnitsSold'], df['Price'], df['Discount']).sum()\n",
         "\n",
         "# Group by region and store, then find the store with the highest revenue in each region\n",
         "highest_revenue_stores = df.groupby(['Region', 'StoreID'])['Revenue'].sum().reset_index()\n",
@@ -6975,9 +6980,9 @@
           "height": 237
         },
         "id": "OEQ-ZK6CvdRt",
-        "outputId": "dca98dec-449d-4c52-f12f-bc9739440978"
+        "outputId": "a95c40ee-e7d9-4bfb-d358-1391cb84b378"
       },
-      "execution_count": 9,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6993,7 +6998,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7e627e17-5fac-492e-8c53-4eff25a4a2d1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5567c73a-1feb-4414-8e7e-a46b83d84506\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -7067,7 +7072,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e627e17-5fac-492e-8c53-4eff25a4a2d1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5567c73a-1feb-4414-8e7e-a46b83d84506')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -7119,12 +7124,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7e627e17-5fac-492e-8c53-4eff25a4a2d1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5567c73a-1feb-4414-8e7e-a46b83d84506 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7e627e17-5fac-492e-8c53-4eff25a4a2d1');\n",
+              "        const element = document.querySelector('#df-5567c73a-1feb-4414-8e7e-a46b83d84506');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -7144,8 +7149,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ecb0c1d6-bd9a-4223-8b33-8fd941d22691\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ecb0c1d6-bd9a-4223-8b33-8fd941d22691')\"\n",
+              "<div id=\"df-a96b2f88-72e1-4115-8a15-5df9a25dd870\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a96b2f88-72e1-4115-8a15-5df9a25dd870')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -7264,7 +7269,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ecb0c1d6-bd9a-4223-8b33-8fd941d22691 button');\n",
+              "        document.querySelector('#df-a96b2f88-72e1-4115-8a15-5df9a25dd870 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -7280,7 +7285,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 39
         }
       ]
     },
