--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJCNNROp9mQQYXg8XVUURN"
+      "authorship_tag": "ABX9TyPIqU3ygQnfsmH1w1i+F30I"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,7 +20,7 @@
       "source": [
         "# **Working With Date & Time Series Data**\n",
         "---\n",
-        "**The dataset on cryptocurrency (Ethereum) is used in this work. Originally, its size is 23674 records spread over 7 columns (or attributes) i.e. 165718 data points. Later on, more columns are added and the date column is streamlined, all for more granular and easier analysis.**\n"
+        "**The dataset on cryptocurrency (Ethereum) is used in this work. Originally, its size was 23674 records spread over 7 columns (or attributes) i.e. 165718 data points. Later on, more columns are added and the date column was streamlined, all for more granular and easier analysis.**\n"
       ],
       "metadata": {
         "id": "ig21IcU6r7E2"
@@ -438,28 +438,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NcRhbPeK4IBu",
-        "outputId": "2bcdb393-fbde-487d-804f-07186bd8ae43"
+        "outputId": "ac9f41da-8341-46aa-fdef-db8047422257"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 23674 entries, 0 to 23673\n",
-            "Data columns (total 7 columns):\n",
-            " #   Column  Non-Null Count  Dtype  \n",
-            "---  ------  --------------  -----  \n",
-            " 0   Date    23674 non-null  object \n",
-            " 1   Symbol  23674 non-null  object \n",
-            " 2   Open    23674 non-null  float64\n",
-            " 3   High    23674 non-null  float64\n",
-            " 4   Low     23674 non-null  float64\n",
-            " 5   Close   23674 non-null  float64\n",
-            " 6   Volume  23674 non-null  float64\n",
-            "dtypes: float64(5), object(2)\n",
-            "memory usage: 1.3+ MB\n"
+            "DatetimeIndex: 23674 entries, 2020-03-13 20:00:00 to 2017-07-01 11:00:00\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column     Non-Null Count  Dtype  \n",
+            "---  ------     --------------  -----  \n",
+            " 0   ForYear    23674 non-null  int32  \n",
+            " 1   ForMonth   23674 non-null  object \n",
+            " 2   DayOfWeek  23674 non-null  object \n",
+            " 3   Symbol     23674 non-null  object \n",
+            " 4   Open       23674 non-null  float64\n",
+            " 5   High       23674 non-null  float64\n",
+            " 6   Low        23674 non-null  float64\n",
+            " 7   Close      23674 non-null  float64\n",
+            " 8   Volume     23674 non-null  float64\n",
+            "dtypes: float64(5), int32(1), object(3)\n",
+            "memory usage: 1.7+ MB\n"
           ]
         }
       ]
@@ -8624,27 +8626,30 @@
       "metadata": {
         "id": "4aJ1Ew0YurB8"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "##### **```DATA LOADING & TRANSFORMATION LOGIC AT ONE PLACE FOR QUICK RELOADING IN CASE OF ABRUPT SESSION TERMINATION```**"
+      ],
       "metadata": {
-        "id": "P2fDqrvMuq9y"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "vKIUF_Vq7pdA"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "'''DATA LOADING & TRANSFORMATION LOGIC AT ONE PLACE FOR QUICK RELOADING IN CASE OF ABRUPT SESSION TERMINATION'''\n",
-        "\n",
         "# import pandas as pd\n",
         "\n",
         "# df = pd.read_csv('/content/DateTimeData.csv', parse_dates = ['Date'], date_format = '%Y-%m-%d %I-%p')\n",
         "\n",
+        "# pd.set_option('display.max_columns', df.shape[1])  # Setting to display all cols of df\n",
+        "\n",
+        "# # Changing the dtype of 'Date' column to datetime type\n",
+        "# df['Date'] = pd.to_datetime(df['Date'], format = '%Y-%m-%d %I-%p')\n",
         "\n",
         "# df['DayOfWeek'] = df['Date'].dt.day_name()\n",
         "# df['ForYear'] = df['Date'].dt.year\n",
@@ -8652,24 +8657,16 @@
         "\n",
         "# df.set_index('Date', inplace = True)\n",
         "\n",
+        "# # Shifting the newly created 3 cols besides 'Date'\n",
         "# cols = df.columns.tolist()\n",
         "# cols.insert(0, cols.pop(cols.index('ForYear')))\n",
         "# cols.insert(1, cols.pop(cols.index('ForMonth')))\n",
         "# cols.insert(2, cols.pop(cols.index('DayOfWeek')))\n",
         "# df = df[cols]\n",
-        "# df"
+        "# df\n"
       ],
       "metadata": {
-        "id": "vKIUF_Vq7pdA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Ev4wyazEeRUY"
+        "id": "kjnCl9nJibvt"
       },
       "execution_count": null,
       "outputs": []
