--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC7x2b1/kfB9wUnsLBJ2ie"
+      "authorship_tag": "ABX9TyNh16/6QitU4J2hrCg8R36G"
     },
     "kernelspec": {
       "name": "python3",
@@ -5395,7 +5395,7 @@
         "\n",
         "*-- Works with time-indexed DataFrames or Series.*\n",
         "\n",
-        "*-- Requires a frequency string (freq) to specify the time intervals (e.g., D for day, W for week, M for month). Ref. [the Pandas documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects) for more.*\n",
+        "*-- Requires a frequency string (freq) to specify the time intervals (e.g., D for day, W for week, M for month). Ref. **[the Pandas documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects)** for more.*\n",
         "\n",
         "*-- Aggregates data using methods like .mean(), .sum(), .count(), etc.*"
       ],
@@ -7300,15 +7300,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2dG7U9coG9wv"
-      },
-      "execution_count": 66,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
