--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNh16/6QitU4J2hrCg8R36G"
+      "authorship_tag": "ABX9TyP0PiJUDyprQIMuu4Q5ejJL"
     },
     "kernelspec": {
       "name": "python3",
@@ -8331,7 +8331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 10 January 2018 2019 2020"
+        "### What was the YoY total volume in, say, 2018 2019 & 2020 on 10 January?"
       ],
       "metadata": {
         "id": "BpubXgK-54tQ"
@@ -8341,26 +8341,78 @@
       "cell_type": "code",
       "source": [
         "# df[df['ForYear'].isin([2018, 2019, 2020]) & (df['ForDay']==10) & (df['ForMonth']=='January')]\n",
-        "df.groupby(['ForYear', 'ForMonth', 'ForDay']).get_group((2018, 'January', 10))['Volume'].sum()"
+        "# df.groupby(['ForYear', 'ForMonth', 'ForDay']).get_group((2018, 'January', 10))['Volume'].sum()\n",
+        "\n",
+        "df_temp = df.copy(deep = True)\n",
+        "df_temp.set_index('Date', inplace = True)   # 'resample()' in next line works only for index of datetime type\n",
+        "df_temp['Volume'].resample('D').sum().loc[['2018-01-10', '2019-01-10', '2020-01-10']].rename('TotalVolume')"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 209
         },
         "id": "ibhsS57k5cO7",
-        "outputId": "9d0b017c-1f02-4c79-9104-86cd610e8a6a"
+        "outputId": "c1c17efa-b168-4c53-f937-c6a66720380e"
       },
-      "execution_count": 20,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "455622468.29"
+              "Date\n",
+              "2018-01-10   455622468.2900\n",
+              "2019-01-10    41297811.4200\n",
+              "2020-01-10    19322754.7800\n",
+              "Name: TotalVolume, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>TotalVolume</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2018-01-10</th>\n",
+              "      <td>455622468.2900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-01-10</th>\n",
+              "      <td>41297811.4200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-01-10</th>\n",
+              "      <td>19322754.7800</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 67
         }
       ]
     },
