--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0PiJUDyprQIMuu4Q5ejJL"
+      "authorship_tag": "ABX9TyOExVrRI1H+SHAWoVjcul9a"
     },
     "kernelspec": {
       "name": "python3",
@@ -8338,11 +8338,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**METHOD-1: Using resampling**"
+      ],
+      "metadata": {
+        "id": "eiZEo7qZi4le"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# df[df['ForYear'].isin([2018, 2019, 2020]) & (df['ForDay']==10) & (df['ForMonth']=='January')]\n",
-        "# df.groupby(['ForYear', 'ForMonth', 'ForDay']).get_group((2018, 'January', 10))['Volume'].sum()\n",
-        "\n",
         "df_temp = df.copy(deep = True)\n",
         "df_temp.set_index('Date', inplace = True)   # 'resample()' in next line works only for index of datetime type\n",
         "df_temp['Volume'].resample('D').sum().loc[['2018-01-10', '2019-01-10', '2020-01-10']].rename('TotalVolume')"
@@ -8413,6 +8419,194 @@
           },
           "metadata": {},
           "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**METHOD-2: Using the '.dt' accessor for date-time type values**"
+      ],
+      "metadata": {
+        "id": "tjBpoXb4i8gH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tmp = df[df['Date'].dt.year.isin([2018, 2019, 2020]) & (df['Date'].dt.month == 1) & (df['Date'].dt.day == 10)]\n",
+        "df_tmp.groupby(['ForYear', 'ForMonth', 'ForDay'])['Volume'].sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "id": "-gprJN8_ieRB",
+        "outputId": "f158b6c8-5a17-47cd-89c8-5373b4a39fb4"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ForYear  ForMonth  ForDay\n",
+              "2018     January   10       455622468.2900\n",
+              "2019     January   10        41297811.4200\n",
+              "2020     January   10        19322754.7800\n",
+              "Name: Volume, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>Volume</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ForYear</th>\n",
+              "      <th>ForMonth</th>\n",
+              "      <th>ForDay</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2018</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>455622468.2900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>41297811.4200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>19322754.7800</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**METHOD-3: Using the extracted columns directly**"
+      ],
+      "metadata": {
+        "id": "RpTkxvy9jFxy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_tmp = df[df['ForYear'].isin([2018, 2019, 2020]) & (df['ForMonth']=='January') & (df['ForDay'] == 10)]\n",
+        "df_tmp.groupby(['ForYear', 'ForMonth', 'ForDay'])['Volume'].sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "id": "ouditwTzhYDE",
+        "outputId": "2f3cb47a-2326-4f6e-dc22-02ef4983d3a3"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ForYear  ForMonth  ForDay\n",
+              "2018     January   10       455622468.2900\n",
+              "2019     January   10        41297811.4200\n",
+              "2020     January   10        19322754.7800\n",
+              "Name: Volume, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>Volume</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ForYear</th>\n",
+              "      <th>ForMonth</th>\n",
+              "      <th>ForDay</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2018</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>455622468.2900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>41297811.4200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020</th>\n",
+              "      <th>January</th>\n",
+              "      <th>10</th>\n",
+              "      <td>19322754.7800</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
         }
       ]
     },
