--- a/BQ_IowaLiquorSales.ipynb
+++ b/BQ_IowaLiquorSales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGsPPuy+mBWm/kQ3YyUhcH"
+      "authorship_tag": "ABX9TyOPtVr5NGqBdsCMbHNQG8Rm"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Iowa Liquor Retail Sales Big Query Dataset Transformation & Analysis** (Underway...)\n",
+        "# **Iowa Liquor Retail Sales Big Query Dataset Cleaning**\n",
         "---"
       ],
       "metadata": {
@@ -30,7 +30,9 @@
       "source": [
         "**The dataset used here includes statewide wholesale liquor purchases by Iowa (state in USA) retailers since January 1, 2012. It details orders from grocery stores, liquor stores, and convenience stores, including store locations, liquor brands, sizes, and quantities. The complete Iowa state's liquor retail sales raw dataset contains more than 40 million records and can be downloaded from [this Big Query link](https://console.cloud.google.com/marketplace/product/iowa-department-of-commerce/iowa-liquor-sales).**\n",
         "\n",
-        "**For our data transformation and analysis activity, we've used here only the top 30000 records from the dataset.**\n",
+        "**For our data transformation activity, we've used here only the top 30000 records from the dataset. Special attention was paid to handling NaN values; a PDF and a CSV files were taken from Internet and imported here to fill missing values. After all the cleaning, the shape of the dataset became 29886 by 26.**\n",
+        "\n",
+        "**Since the dataset contains geographic coordinates, a plot of Iowa map has been created as well just for demonstration purpose.**\n",
         "\n",
         "---"
       ],
