--- a/JSON Gym/Pandas_JSON_Gym.ipynb
+++ b/JSON Gym/Pandas_JSON_Gym.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Parsing a nested JSON file and converting it nested/unnested content into separate columns using Pandas is a common task in data wrangling. Here, JSON flattening is described through three ways: basic, hardcoding and recursive function calling.**"
+        "**Parsing a nested JSON file and converting its nested/unnested content into separate columns using Pandas is a common task in data wrangling. Here, JSON flattening is described in three ways: basic, hardcoding, and recursive function calling.**"
       ],
       "metadata": {
         "id": "yvG1xnSV-FvP"
