--- a/JSON Gym/Pandas_JSON_Gym.ipynb
+++ b/JSON Gym/Pandas_JSON_Gym.ipynb
@@ -4809,7 +4809,7 @@
       "metadata": {
         "id": "R45yqNY8txkX"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -4851,7 +4851,7 @@
       "metadata": {
         "id": "P40ILPEfvfuI"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -4933,7 +4933,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 175
         },
         "id": "Nhu5R73Tt7ZK",
         "outputId": "3a968ccb-0f6e-4ac4-95e9-9dbc51267ec8"
@@ -5433,7 +5433,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 175
         },
         "id": "dRMy1_gn58bz",
         "outputId": "a4651a95-4ce7-4236-ec12-1ff30bba6c9c"
@@ -5834,6 +5834,240 @@
           },
           "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Tracking the recursion in every step's output using ```print()```**"
+      ],
+      "metadata": {
+        "id": "NT3HgvzNI0B5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Recursively flattens a DataFrame that may contain nested dicts or lists of dicts. Uses 'pd.json_normalize()' and 'df.explode()'\n",
+        "\n",
+        "def recursive_normalize(df, sep='_'):\n",
+        "    while True:\n",
+        "        print('\\n*************** WITHIN WHILE LOOP ****************\\n')\n",
+        "        # Step 1: Find cols that are lists of dicts → need explode + normalize\n",
+        "        list_cols = [col for col in df.columns if df[col].apply(lambda x: isinstance(x, list)).any()]\n",
+        "        print('List cols are:', list_cols)\n",
+        "        dict_cols = [col for col in df.columns if df[col].apply(lambda x: isinstance(x, dict)).any()]\n",
+        "        print('Dict cols are:', dict_cols, '\\n')\n",
+        "\n",
+        "        # Step 2: Explode list columns\n",
+        "        for col in list_cols:\n",
+        "            df = df.explode(col, ignore_index = True)\n",
+        "            print('In FOR LOOP LIST now -- Exploded lists into rows in df:\\n', df)\n",
+        "        print('------------------------------------------------------------\\n')\n",
+        "\n",
+        "        # Step 3: Normalize dict columns\n",
+        "        for col in dict_cols:\n",
+        "            print('\\nIn FOR LOOP DICT now ...\\n')\n",
+        "            # Normalize nested dict\n",
+        "            norm = pd.json_normalize(df[col].dropna().tolist(), sep = sep)\n",
+        "            print('Norm is :', norm)\n",
+        "            norm.columns = [f\"{col}{sep}{subcol}\" for subcol in norm.columns]\n",
+        "            print('Cols in norm are:', norm.columns)\n",
+        "            df = df.drop(columns=[col]).join(norm)\n",
+        "            print('df joined with norm is:', df)\n",
+        "        print('-------------------- FOR LOOP DICT ENDED ----------------------------------------\\n')\n",
+        "        if not list_cols and not dict_cols: print('ALL COLS EXPANDED ... COLS IN df ARE:\\n', df.columns); break  # Done\n",
+        "    return df"
+      ],
+      "metadata": {
+        "id": "ZspZa80kw6uj"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.json_normalize(nested_json, sep='_')  # Step 1: Normalize top-level JSON\n",
+        "print('\\n LIST OF HIGH LEVEL COLUMNS :\\n', df.columns,'\\n')\n",
+        "\n",
+        "flat_df = recursive_normalize(df)             # Step 2: Recursively flatten it"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1qZpVO0jw9Yq",
+        "outputId": "03401f51-f37b-4cb8-d9be-c766f252e5c2"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " LIST OF HIGH LEVEL COLUMNS :\n",
+            " Index(['user_id', 'name', 'orders', 'contact_email', 'contact_phone',\n",
+            "       'address_street', 'address_city', 'address_zip'],\n",
+            "      dtype='object') \n",
+            "\n",
+            "\n",
+            "*************** WITHIN WHILE LOOP ****************\n",
+            "\n",
+            "List cols are: ['orders']\n",
+            "Dict cols are: [] \n",
+            "\n",
+            "In FOR LOOP LIST now -- Exploded lists into rows in df:\n",
+            "    user_id   name                                             orders  \\\n",
+            "0      101  Alice  {'order_id': 1001, 'order_date': '2023-01-01',...   \n",
+            "1      101  Alice  {'order_id': 1002, 'order_date': '2023-01-10',...   \n",
+            "\n",
+            "       contact_email contact_phone address_street address_city address_zip  \n",
+            "0  alice@example.com  123-456-7890  123 Maple St.  Springfield       12345  \n",
+            "1  alice@example.com  123-456-7890  123 Maple St.  Springfield       12345  \n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
+            "\n",
+            "\n",
+            "*************** WITHIN WHILE LOOP ****************\n",
+            "\n",
+            "List cols are: []\n",
+            "Dict cols are: ['orders'] \n",
+            "\n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "\n",
+            "In FOR LOOP DICT now ...\n",
+            "\n",
+            "Norm is :    order_id  order_date                                              items\n",
+            "0      1001  2023-01-01  [{'item_id': 'A1', 'item_name': 'Laptop', 'pri...\n",
+            "1      1002  2023-01-10  [{'item_id': 'B1', 'item_name': 'Phone', 'pric...\n",
+            "Cols in norm are: Index(['orders_order_id', 'orders_order_date', 'orders_items'], dtype='object')\n",
+            "df joined with norm is:    user_id   name      contact_email contact_phone address_street  \\\n",
+            "0      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "1      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "\n",
+            "  address_city address_zip  orders_order_id orders_order_date  \\\n",
+            "0  Springfield       12345             1001        2023-01-01   \n",
+            "1  Springfield       12345             1002        2023-01-10   \n",
+            "\n",
+            "                                        orders_items  \n",
+            "0  [{'item_id': 'A1', 'item_name': 'Laptop', 'pri...  \n",
+            "1  [{'item_id': 'B1', 'item_name': 'Phone', 'pric...  \n",
+            "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
+            "\n",
+            "\n",
+            "*************** WITHIN WHILE LOOP ****************\n",
+            "\n",
+            "List cols are: ['orders_items']\n",
+            "Dict cols are: [] \n",
+            "\n",
+            "In FOR LOOP LIST now -- Exploded lists into rows in df:\n",
+            "    user_id   name      contact_email contact_phone address_street  \\\n",
+            "0      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "1      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "2      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "3      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "\n",
+            "  address_city address_zip  orders_order_id orders_order_date  \\\n",
+            "0  Springfield       12345             1001        2023-01-01   \n",
+            "1  Springfield       12345             1001        2023-01-01   \n",
+            "2  Springfield       12345             1002        2023-01-10   \n",
+            "3  Springfield       12345             1002        2023-01-10   \n",
+            "\n",
+            "                                        orders_items  \n",
+            "0  {'item_id': 'A1', 'item_name': 'Laptop', 'pric...  \n",
+            "1  {'item_id': 'A2', 'item_name': 'Mouse', 'price...  \n",
+            "2  {'item_id': 'B1', 'item_name': 'Phone', 'price...  \n",
+            "3  {'item_id': 'B2', 'item_name': 'Charger', 'pri...  \n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
+            "\n",
+            "\n",
+            "*************** WITHIN WHILE LOOP ****************\n",
+            "\n",
+            "List cols are: []\n",
+            "Dict cols are: ['orders_items'] \n",
+            "\n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "\n",
+            "In FOR LOOP DICT now ...\n",
+            "\n",
+            "Norm is :   item_id item_name  price\n",
+            "0      A1    Laptop    800\n",
+            "1      A2     Mouse     25\n",
+            "2      B1     Phone    500\n",
+            "3      B2   Charger     30\n",
+            "Cols in norm are: Index(['orders_items_item_id', 'orders_items_item_name', 'orders_items_price'], dtype='object')\n",
+            "df joined with norm is:    user_id   name      contact_email contact_phone address_street  \\\n",
+            "0      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "1      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "2      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "3      101  Alice  alice@example.com  123-456-7890  123 Maple St.   \n",
+            "\n",
+            "  address_city address_zip  orders_order_id orders_order_date  \\\n",
+            "0  Springfield       12345             1001        2023-01-01   \n",
+            "1  Springfield       12345             1001        2023-01-01   \n",
+            "2  Springfield       12345             1002        2023-01-10   \n",
+            "3  Springfield       12345             1002        2023-01-10   \n",
+            "\n",
+            "  orders_items_item_id orders_items_item_name  orders_items_price  \n",
+            "0                   A1                 Laptop                 800  \n",
+            "1                   A2                  Mouse                  25  \n",
+            "2                   B1                  Phone                 500  \n",
+            "3                   B2                Charger                  30  \n",
+            "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
+            "\n",
+            "\n",
+            "*************** WITHIN WHILE LOOP ****************\n",
+            "\n",
+            "List cols are: []\n",
+            "Dict cols are: [] \n",
+            "\n",
+            "------------------------------------------------------------\n",
+            "\n",
+            "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
+            "\n",
+            "ALL COLS EXPANDED ... COLS IN df ARE:\n",
+            " Index(['user_id', 'name', 'contact_email', 'contact_phone', 'address_street',\n",
+            "       'address_city', 'address_zip', 'orders_order_id', 'orders_order_date',\n",
+            "       'orders_items_item_id', 'orders_items_item_name', 'orders_items_price'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flat_df.columns  # O/P matches above o/p so entire run was correct"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XMzNWCuww-CC",
+        "outputId": "3a9e12aa-93a4-45b6-f3c6-060eabc6bdd8"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['user_id', 'name', 'contact_email', 'contact_phone', 'address_street',\n",
+              "       'address_city', 'address_zip', 'orders_order_id', 'orders_order_date',\n",
+              "       'orders_items_item_id', 'orders_items_item_name', 'orders_items_price'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
         }
       ]
     }
