--- a/JSON Gym/Pandas_JSON_Gym.ipynb
+++ b/JSON Gym/Pandas_JSON_Gym.ipynb
@@ -4933,7 +4933,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 195
         },
         "id": "Nhu5R73Tt7ZK",
         "outputId": "3a968ccb-0f6e-4ac4-95e9-9dbc51267ec8"
@@ -5433,7 +5433,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 195
         },
         "id": "dRMy1_gn58bz",
         "outputId": "a4651a95-4ce7-4236-ec12-1ff30bba6c9c"
@@ -6100,24 +6100,18 @@
         "      \"name\" : \"Purrsloud\",\n",
         "      \"species\" : \"Cat\",\n",
         "      \"favFoods\" : [\"wet food\", \"dry food\", \"any food\"],\n",
-        "      \"birthYear\" : 2016,\n",
         "      \"features\" : {\"size\": \"medium\", \"weight\" : 10},\n",
-        "      \"photo_URL\" : \"/images/cat-2.jpg\"\n",
         "    },\n",
         "    {\n",
         "      \"name\" : \"Barksalot\",\n",
         "      \"species\" : \"Dog\",\n",
-        "      \"birthYear\" : 2008,\n",
         "      \"features\" : {\"size\": \"short\", \"weight\" : 5},\n",
-        "      \"photo_URL\" : \"/images/dog-1.jpg\"\n",
         "    },\n",
         "    {\n",
         "      \"name\" : \"Meowsalot\",\n",
         "      \"species\" : \"Cat\",\n",
         "      \"favFoods\" : [\"tuna\", \"catnip\", \"celery\"],\n",
-        "      \"birthYear\" : 2012,\n",
         "      \"features\" : {\"size\": \"large\", \"weight\" : 15},\n",
-        "      \"photo_URL\" : \"/images/cat-1.jpg\"\n",
         "    }\n",
         "  ]\n",
         "}"
@@ -6125,7 +6119,7 @@
       "metadata": {
         "id": "pREO5tU8Ld-K"
       },
-      "execution_count": 63,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -6164,7 +6158,7 @@
       "metadata": {
         "id": "MBp8Os6QLw0K"
       },
-      "execution_count": 64,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -6179,9 +6173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WiUaIoeKLyAJ",
-        "outputId": "7eee0a3f-1737-4e9b-b010-b97009f4a288"
+        "outputId": "9e00b4aa-97c7-4173-b46c-6430e3c8cc8b"
       },
-      "execution_count": 65,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -6198,7 +6192,7 @@
             "In FOR LOOP LIST now -- Exploded lists into rows in df:\n",
             "                                                 pets\n",
             "0  {'name': 'Purrsloud', 'species': 'Cat', 'favFo...\n",
-            "1  {'name': 'Barksalot', 'species': 'Dog', 'birth...\n",
+            "1  {'name': 'Barksalot', 'species': 'Dog', 'featu...\n",
             "2  {'name': 'Meowsalot', 'species': 'Cat', 'favFo...\n",
             "------------------------------------------------------------\n",
             "\n",
@@ -6216,26 +6210,26 @@
             "In FOR LOOP DICT now ...\n",
             "\n",
             "Norm is :\n",
-            "         name species                        favFoods  birthYear  \\\n",
-            "0  Purrsloud     Cat  [wet food, dry food, any food]       2016   \n",
-            "1  Barksalot     Dog                             NaN       2008   \n",
-            "2  Meowsalot     Cat          [tuna, catnip, celery]       2012   \n",
+            "         name species                        favFoods features_size  \\\n",
+            "0  Purrsloud     Cat  [wet food, dry food, any food]        medium   \n",
+            "1  Barksalot     Dog                             NaN         short   \n",
+            "2  Meowsalot     Cat          [tuna, catnip, celery]         large   \n",
             "\n",
-            "           photo_URL features_size  features_weight  \n",
-            "0  /images/cat-2.jpg        medium               10  \n",
-            "1  /images/dog-1.jpg         short                5  \n",
-            "2  /images/cat-1.jpg         large               15   \n",
+            "   features_weight  \n",
+            "0               10  \n",
+            "1                5  \n",
+            "2               15   \n",
             "\n",
             "df joined with norm is:\n",
-            "    pets_name pets_species                   pets_favFoods  pets_birthYear  \\\n",
-            "0  Purrsloud          Cat  [wet food, dry food, any food]            2016   \n",
-            "1  Barksalot          Dog                             NaN            2008   \n",
-            "2  Meowsalot          Cat          [tuna, catnip, celery]            2012   \n",
+            "    pets_name pets_species                   pets_favFoods pets_features_size  \\\n",
+            "0  Purrsloud          Cat  [wet food, dry food, any food]             medium   \n",
+            "1  Barksalot          Dog                             NaN              short   \n",
+            "2  Meowsalot          Cat          [tuna, catnip, celery]              large   \n",
             "\n",
-            "      pets_photo_URL pets_features_size  pets_features_weight  \n",
-            "0  /images/cat-2.jpg             medium                    10  \n",
-            "1  /images/dog-1.jpg              short                     5  \n",
-            "2  /images/cat-1.jpg              large                    15  \n",
+            "   pets_features_weight  \n",
+            "0                    10  \n",
+            "1                     5  \n",
+            "2                    15  \n",
             "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
             "\n",
             "\n",
@@ -6245,23 +6239,23 @@
             "Dict cols are: [] \n",
             "\n",
             "In FOR LOOP LIST now -- Exploded lists into rows in df:\n",
-            "    pets_name pets_species pets_favFoods  pets_birthYear     pets_photo_URL  \\\n",
-            "0  Purrsloud          Cat      wet food            2016  /images/cat-2.jpg   \n",
-            "1  Purrsloud          Cat      dry food            2016  /images/cat-2.jpg   \n",
-            "2  Purrsloud          Cat      any food            2016  /images/cat-2.jpg   \n",
-            "3  Barksalot          Dog           NaN            2008  /images/dog-1.jpg   \n",
-            "4  Meowsalot          Cat          tuna            2012  /images/cat-1.jpg   \n",
-            "5  Meowsalot          Cat        catnip            2012  /images/cat-1.jpg   \n",
-            "6  Meowsalot          Cat        celery            2012  /images/cat-1.jpg   \n",
+            "    pets_name pets_species pets_favFoods pets_features_size  \\\n",
+            "0  Purrsloud          Cat      wet food             medium   \n",
+            "1  Purrsloud          Cat      dry food             medium   \n",
+            "2  Purrsloud          Cat      any food             medium   \n",
+            "3  Barksalot          Dog           NaN              short   \n",
+            "4  Meowsalot          Cat          tuna              large   \n",
+            "5  Meowsalot          Cat        catnip              large   \n",
+            "6  Meowsalot          Cat        celery              large   \n",
             "\n",
-            "  pets_features_size  pets_features_weight  \n",
-            "0             medium                    10  \n",
-            "1             medium                    10  \n",
-            "2             medium                    10  \n",
-            "3              short                     5  \n",
-            "4              large                    15  \n",
-            "5              large                    15  \n",
-            "6              large                    15  \n",
+            "   pets_features_weight  \n",
+            "0                    10  \n",
+            "1                    10  \n",
+            "2                    10  \n",
+            "3                     5  \n",
+            "4                    15  \n",
+            "5                    15  \n",
+            "6                    15  \n",
             "------------------------------------------------------------\n",
             "\n",
             "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
@@ -6277,8 +6271,8 @@
             "-------------------- FOR LOOP DICT ENDED ----------------------------------------\n",
             "\n",
             "ALL COLS EXPANDED ... COLS IN df ARE:\n",
-            " Index(['pets_name', 'pets_species', 'pets_favFoods', 'pets_birthYear',\n",
-            "       'pets_photo_URL', 'pets_features_size', 'pets_features_weight'],\n",
+            " Index(['pets_name', 'pets_species', 'pets_favFoods', 'pets_features_size',\n",
+            "       'pets_features_weight'],\n",
             "      dtype='object')\n"
           ]
         }
